--- a/_config.yml
+++ b/_config.yml
@@ -3,12 +3,12 @@ title: BhimaraoBrothers # your site title
 author: GitHub User # You :P
 description: > # Meta description of Homepage
   Bhimarao Brothers
-baseurl: "/bhimaraobrothers" # the subpath of your site, e.g. /blog
+baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://bhimaraobrothers.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 
 # SEO PLUGIN
 social:
-  name: Bhimarao Brothers
+  name: Your name
   links:
     - https://twitter.com/
     - https://www.facebook.com/
@@ -28,7 +28,7 @@ tagline: >
 
 hero_img: posts/sleek_lg.jpg # Main background image: use the path from /assets/img/ => This will output /assets/img/posts/sleek_lg.jpg
 
-email: your-bhimaraobrother@gmail.com # email for form submission
+email: your-email@dmain.com # email for form submission
 
 twitter_username:  # replace with your_twitter_username or comment to remove link from footer
 github_username:   # replace with your_github_username or comment to remove link from footer
