--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ url: "https://bhimaraobrothers.github.io/" # the base hostname & protocol for yo
 
 # SEO PLUGIN
 social:
-  name: Your name
+  name: bhimaraobrothers
   links:
     - https://twitter.com/
     - https://www.facebook.com/
