--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: BhimaraoBrothers # your site title
 author: GitHub User # You :P
 description: > # Meta description of Homepage
   Bhimarao Brothers
-baseurl: "/bhimaraobrothers.in" # the subpath of your site, e.g. /blog
+baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://bhimaraobrothers.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 
 # SEO PLUGIN
