--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # SITE CONFIGURATION
-title: <i><b>BhimaraoBrothers</b></i> # your site title
+title: <b>BhimaraoBrothers</b> # your site title
 author: GitHub User # You :P
 description: > # Meta description of Homepage
   Bhimarao Brothers
