--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ author: GitHub User # You :P
 description: > # Meta description of Homepage
   Bhimarao Brothers
 baseurl: "/" # the subpath of your site, e.g. /blog
-url: "https://bhimaraobrothers.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://bhimaraobrothers.in/" # the base hostname & protocol for your site, e.g. http://example.com
 
 # SEO PLUGIN
 social:
