--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: BhimaraoBrothers # your site title
 author: GitHub User # You :P
 description: > # Meta description of Homepage
-  Bhimarao Brothers
+  Bhimarao Brothers Kallappalayam Ambedkar Nagar
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://bhimaraobrothers.in/" # the base hostname & protocol for your site, e.g. http://example.com
 
